--- a/src/main/resources/docgen/templates/msmarco-passage-doc2query.template
+++ b/src/main/resources/docgen/templates/msmarco-passage-doc2query.template
@@ -19,6 +19,7 @@ ${index_cmds}
 ```
 
 The directory `/path/to/msmarco-passage/` should be a directory containing `jsonl` files converted from the official passage collection, appended with the doc2query expansions.
+[This page](experiments-doc2query.md) explains how to perform this data preparation.
 
 For additional details, see explanation of [common indexing options](common-indexing-options.md).
 
