--- a/src/main/resources/docgen/templates/msmarco-passage-docTTTTTquery.template
+++ b/src/main/resources/docgen/templates/msmarco-passage-docTTTTTquery.template
@@ -18,6 +18,7 @@ ${index_cmds}
 ```
 
 The directory `/path/to/msmarco-passage/` should be a directory containing `jsonl` files converted from the official passage collection, appended with the docTTTTTquery expansions.
+[Instructions in the docTTTTTquery repo](http://doc2query.ai/) explain how to perform this data preparation.
 
 For additional details, see explanation of [common indexing options](common-indexing-options.md).
 
