--- a/src/main/resources/docgen/templates/dl19-doc-docTTTTTquery-per-doc.template
+++ b/src/main/resources/docgen/templates/dl19-doc-docTTTTTquery-per-doc.template
@@ -23,7 +23,7 @@ Typical indexing command:
 ${index_cmds}
 ```
 
-The directory `/path/to/msmarco-doc/` should be a directory containing the official document collection (a single file), in TREC format.
+The directory `/path/to/msmarco-doc-docTTTTTquery-per-doc/` should be a directory containing the expanded document collection; see [this link](https://github.com/castorini/docTTTTTquery#reproducing-ms-marco-document-ranking-results-with-anserini) for how to prepare this collection.
 
 For additional details, see explanation of [common indexing options](common-indexing-options.md).
 
