--- a/src/main/resources/docgen/templates/dl20-doc-per-passage.template
+++ b/src/main/resources/docgen/templates/dl20-doc-per-passage.template
@@ -24,7 +24,7 @@ Typical indexing command:
 ${index_cmds}
 ```
 
-The directory `/path/to/msmarco-doc/` should be a directory containing the official document collection (a single file), in TREC format.
+The directory `/path/to/msmarco-doc-per-passage/` should be a directory containing the segmented paragraph collection; see [this link](https://github.com/castorini/docTTTTTquery#reproducing-ms-marco-document-ranking-results-with-anserini) for how to prepare this collection.
 
 For additional details, see explanation of [common indexing options](common-indexing-options.md).
 
