--- a/src/main/resources/docgen/templates/dl20-passage-docTTTTTquery.template
+++ b/src/main/resources/docgen/templates/dl20-passage-docTTTTTquery.template
@@ -17,8 +17,8 @@ Typical indexing command:
 ${index_cmds}
 ```
 
-The directory `/path/to/msmarco-passage/` should be a directory containing `jsonl` files converted from the official passage collection, which is in `tsv` format.
-[This page](experiments-msmarco-passage.md) explains how to perform this conversion.
+The directory `/path/to/msmarco-passage/` should be a directory containing `jsonl` files containing the expanded passage collection.
+[Instructions in the docTTTTTquery repo](http://doc2query.ai/) explain how to perform this data preparation.
 
 For additional details, see explanation of [common indexing options](common-indexing-options.md).
 
