--- a/src/main/resources/docgen/templates/dl19-doc-docTTTTTquery-per-passage.template
+++ b/src/main/resources/docgen/templates/dl19-doc-docTTTTTquery-per-passage.template
@@ -52,8 +52,12 @@ With the above commands, you should be able to reproduce the following results:
 
 ${effectiveness}
 
-The setting "default" refers the default BM25 settings of `k1=0.9`, `b=0.4`, while "tuned" refers to the tuned setting of `k1=2.16`, `b=0.61`.
-An important note here is that tuning was performed on _on the original documents_, not the expanded documents.
+Explanation of settings:
+
++ The setting "default" refers the default BM25 settings of `k1=0.9`, `b=0.4`.
++ The setting "tuned" refers to `k1=2.16`, `b=0.61`, tuned using the MS MARCO passage sparse judgments (2020/12). Tuning was performed on _on the original documents_, not the expanded documents.
+
+Settings tuned on the MS MARCO passage sparse judgments _may not_ work well on the TREC dense judgments.
 
 Note that retrieval metrics are computed to depth 100 hits per query (as opposed to 1000 hits per query for DL19 passage ranking).
 Also, remember that we keep qrels of _all_ relevance grades, unlike the case for DL19 passage ranking, where relevance grade 1 needs to be discarded when computing certain metrics.
