--- a/src/main/resources/docgen/templates/msmarco-doc-docTTTTTquery-per-doc.template
+++ b/src/main/resources/docgen/templates/msmarco-doc-docTTTTTquery-per-doc.template
@@ -46,7 +46,10 @@ With the above commands, you should be able to reproduce the following results:
 
 ${effectiveness}
 
-The setting "default" refers the default BM25 settings of `k1=0.9`, `b=0.4`, while "tuned" refers to the tuned setting of `k1=4.68`, `b=0.87`.
+Explanation of settings:
+
++ The setting "default" refers the default BM25 settings of `k1=0.9`, `b=0.4`.
++ The setting "tuned" refers to `k1=4.68`, `b=0.87`, tuned specifically to optimize for recall@100 (i.e., for first-stage retrieval) on 2019/12; see [this page](experiments-msmarco-doc.md) additional details.
 
 In these runs, we are retrieving the top 1000 hits for each query and using `trec_eval` to evaluate all 1000 hits.
 This lets us measure R@100 and R@1000; the latter is particularly important when these runs are used as first-stage retrieval.
