--- a/src/main/resources/docgen/templates/dl20-passage.template
+++ b/src/main/resources/docgen/templates/dl20-passage.template
@@ -57,5 +57,5 @@ Also, for computing nDCG, remember that we keep qrels of _all_ relevance grades,
 
 Some of these regressions correspond to official TREC 2020 Deep Learning Track submissions by team `anserini`:
 
-+ `p_bm25` = BM25 (Default), `k1=0.9`, `b=0.4`
-+ `p_bm25rm3` = BM25 (Default) + RM3, `k1=0.9`, `b=0.4`
++ `p_bm25` = BM25 (default), `k1=0.9`, `b=0.4`
++ `p_bm25rm3` = BM25 (default) + RM3, `k1=0.9`, `b=0.4`
