--- a/src/main/resources/regression/msmarco-passage-docTTTTTquery.yaml
+++ b/src/main/resources/regression/msmarco-passage-docTTTTTquery.yaml
@@ -50,7 +50,7 @@ topics:
     qrel: qrels.msmarco-passage.dev-subset.txt
 models:
   - name: bm25-default
-    display: BM25 (Default)
+    display: BM25 (default)
     params:
       - -bm25
     results:
@@ -71,7 +71,7 @@ models:
       R@1000:
         - 0.9463
   - name: bm25-tuned
-    display: BM25 (Tuned)
+    display: BM25 (tuned)
     params:
       - -bm25
       - -bm25.k1 0.82
@@ -94,7 +94,7 @@ models:
       R@1000:
         - 0.9479
   - name: bm25-tuned2
-    display: BM25 (Tuned2)
+    display: BM25 (tuned2)
     params:
       - -bm25
       - -bm25.k1 2.18
