--- a/src/main/resources/docgen/templates/dl20-doc.template
+++ b/src/main/resources/docgen/templates/dl20-doc.template
@@ -58,5 +58,5 @@ Also, remember that we keep qrels of _all_ relevance grades, unlike the case for
 
 Some of these regressions correspond to official TREC 2020 Deep Learning Track submissions by team `anserini`:
 
-+ `d_bm25` = BM25 (Default), `k1=0.9`, `b=0.4`
-+ `d_bm25rm3` = BM25 (Default) + RM3, `k1=0.9`, `b=0.4`
++ `d_bm25` = BM25 (default), `k1=0.9`, `b=0.4`
++ `d_bm25rm3` = BM25 (default) + RM3, `k1=0.9`, `b=0.4`
