--- a/src/main/resources/regression/dl20-passage-docTTTTTquery.yaml
+++ b/src/main/resources/regression/dl20-passage-docTTTTTquery.yaml
@@ -81,7 +81,7 @@ topics:
     qrel: qrels.dl20-passage.txt
 models:
   - name: bm25-default
-    display: BM25 (Default)
+    display: BM25 (default)
     params:
       - -bm25
     results:
@@ -112,7 +112,7 @@ models:
       R@1000:
         - 0.8699
   - name: bm25-tuned
-    display: BM25 (Tuned)
+    display: BM25 (tuned)
     params:
       - -bm25
       - -bm25.k1 0.82
@@ -147,7 +147,7 @@ models:
       R@1000:
         - 0.8692
   - name: bm25-tuned2
-    display: BM25 (Tuned2)
+    display: BM25 (tuned2)
     params:
       - -bm25
       - -bm25.k1 2.18
