--- a/src/main/resources/regression/msmarco-doc.yaml
+++ b/src/main/resources/regression/msmarco-doc.yaml
@@ -59,7 +59,7 @@ topics:
     qrel: qrels.msmarco-doc.dev.txt
 models:
   - name: bm25-default
-    display: BM25 (Default)
+    display: BM25 (default)
     params:
       - -bm25
     results:
@@ -82,7 +82,7 @@ models:
       R@1000:
         - 0.8785
   - name: bm25-tuned
-    display: BM25 (Tuned)
+    display: BM25 (tuned)
     params:
       - -bm25
       - -bm25.k1 3.44
@@ -109,7 +109,7 @@ models:
       R@1000:
         - 0.9320
   - name: bm25-tuned2
-    display: BM25 (Tuned2)
+    display: BM25 (tuned2)
     params:
       - -bm25
       - -bm25.k1 4.46
