--- a/src/main/resources/docgen/templates/msmarco-doc-docTTTTTquery-per-doc.template
+++ b/src/main/resources/docgen/templates/msmarco-doc-docTTTTTquery-per-doc.template
@@ -49,7 +49,7 @@ ${effectiveness}
 Explanation of settings:
 
 + The setting "default" refers the default BM25 settings of `k1=0.9`, `b=0.4`.
-+ The setting "tuned" refers to `k1=4.68`, `b=0.87`, tuned specifically to optimize for recall@100 (i.e., for first-stage retrieval) on 2019/12; see [this page](experiments-msmarco-doc.md) additional details.
++ The setting "tuned" refers to `k1=4.68`, `b=0.87`, tuned specifically to optimize for recall@100 (i.e., for first-stage retrieval) on 2019/12.
 
 In these runs, we are retrieving the top 1000 hits for each query and using `trec_eval` to evaluate all 1000 hits.
 This lets us measure R@100 and R@1000; the latter is particularly important when these runs are used as first-stage retrieval.
@@ -59,7 +59,7 @@ See [this page](experiments-msmarco-doc-leaderboard.md) for details on Anserini 
 Note that leaderboard runs were generated with `SearchMsmarco` in the MS MARCO format.
 Conversion of a run in that format into the TREC format is slightly lossy due to tie-breaking effects.
 
-To generate an MS MARCO submission with the BM25 tuned parameters, corresponding to "BM25 (Tuned)" above:
+To generate an MS MARCO submission with the BM25 tuned parameters, corresponding to "BM25 (tuned)" above:
 
 ```bash
 $ sh target/appassembler/bin/SearchMsmarco -hits 100 -k1 4.68 -b 0.87 -threads 9 \
@@ -77,4 +77,4 @@ QueriesRanked: 5193
 #####################
 ```
 
-This run corresponds to the MS MARCO document ranking leaderboard entry "Anserini's BM25 + doc2query-T5 expansion (per document), parameters tuned for recall@100 (k1=4.68, b=0.87)" dated 2020/12/11.
+This run corresponds to the MS MARCO document ranking leaderboard entry "Anserini's BM25 + doc2query-T5 expansion (per document), parameters tuned for recall@100 (k1=4.68, b=0.87)" dated 2020/12/11, and is reported in the Lin et al. (SIGIR 2021) Pyserini paper.
