--- a/src/main/resources/docgen/templates/dl19-doc-docTTTTTquery-per-doc.template
+++ b/src/main/resources/docgen/templates/dl19-doc-docTTTTTquery-per-doc.template
@@ -54,7 +54,7 @@ ${effectiveness}
 Explanation of settings:
 
 + The setting "default" refers the default BM25 settings of `k1=0.9`, `b=0.4`.
-+ The setting "tuned" refers to `k1=3.44`, `b=0.87`, tuned using the MS MARCO document sparse judgments on 2019/06. Tuning was performed on _on the original documents_, not the expanded documents.
++ The setting "tuned" refers to `k1=4.68`, `b=0.87`, tuned using the MS MARCO document sparse judgments to optimize for recall@100 (i.e., for first-stage retrieval) on 2019/12.
 
 Settings tuned on the MS MARCO document sparse judgments _may not_ work well on the TREC dense judgments.
 
