--- a/src/main/resources/docgen/templates/dl20-passage.template
+++ b/src/main/resources/docgen/templates/dl20-passage.template
@@ -45,7 +45,17 @@ With the above commands, you should be able to reproduce the following results:
 
 ${effectiveness}
 
+Explanation of settings:
+
++ The setting "default" refers the default BM25 settings of `k1=0.9`, `b=0.4`.
++ The setting "tuned" refers to `k1=0.82`, `b=0.68`, tuned using the MS MARCO passage sparse judgments, as described in [this page](experiments-msmarco-passage.md).
+
+Settings tuned on the MS MARCO passage sparse judgments _may not_ work well on the TREC dense judgments.
+
 Note that retrieval metrics are computed to depth 1000 hits per query (as opposed to 100 hits per query for DL20 doc ranking).
 Also, for computing nDCG, remember that we keep qrels of _all_ relevance grades, whereas for other metrics (e.g., MAP), relevance grade 1 is considered not relevant (i.e., use the `-l 2` option in `trec_eval`).
 
-The setting "default" refers the default BM25 settings of `k1=0.9`, `b=0.4`, while "tuned" refers to the tuned setting of `k1=0.82`, `b=0.68` (see [this page](experiments-msmarco-passage.md) for more details about tuning).
+Some of these regressions correspond to official TREC 2020 Deep Learning Track submissions by team `anserini`:
+
++ `p_bm25` = BM25 (default), `k1=0.9`, `b=0.4`
++ `p_bm25rm3` = BM25 (default) + RM3, `k1=0.9`, `b=0.4`
