--- a/src/main/resources/regression/dl19-doc-docTTTTTquery-per-doc.yaml
+++ b/src/main/resources/regression/dl19-doc-docTTTTTquery-per-doc.yaml
@@ -1,5 +1,5 @@
 ---
-name: msmarco-doc-docTTTTTquery-per-doc
+name: msmarco-doc-docTTTTTquery-per-doc # Note, this is the name of the collection; this way we can share index with the msmarco regressions
 index_command: target/appassembler/bin/IndexCollection
 index_utils_command: target/appassembler/bin/IndexReaderUtils
 search_command: target/appassembler/bin/SearchCollection
@@ -36,11 +36,11 @@ evals:
     can_combine: true
   - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
-      - -m recall.1000
+      - -m ndcg_cut.10
       - -c
     separator: "\t"
     parse_index: 2
-    metric: R@1000
+    metric: NDCG@10
     metric_precision: 4
     can_combine: true
 input_roots:
@@ -54,31 +54,61 @@ index_stats:
   documents (non-empty): 3213834
   total terms: 3748332076
 topics:
-  - name: "[MS MARCO Doc: Dev](https://github.com/microsoft/MSMARCO-Document-Ranking)"
-    path: topics.msmarco-doc.dev.txt
-    qrel: qrels.msmarco-doc.dev.txt
+  - name: "[DL19 (Doc)](https://trec.nist.gov/data/deep2019.html)"
+    path: topics.dl19-doc.txt
+    qrel: qrels.dl19-doc.txt
 models:
   - name: bm25-default
     display: BM25 (default)
     params:
       - -bm25
+      - -hits 100  # Note, this is different DL 2019 passage ranking!
     results:
       map:
-        - 0.2886
+        - 0.2699
+      NDCG@10:
+        - 0.5968
       R@100:
-        - 0.7990
-      R@1000:
-        - 0.9259
+        - 0.4198
+  - name: bm25-default+rm3
+    display: +RM3
+    params:
+      - -bm25
+      - -rm3
+      - -hits 100  # Note, this is different DL 2019 passage ranking!
+    results:
+      map:
+        - 0.3044
+      NDCG@10:
+        - 0.5895
+      R@100:
+        - 0.4465
   - name: bm25-tuned
     display: BM25 (tuned)
     params:
       - -bm25
       - -bm25.k1 4.68
       - -bm25.b 0.87
+      - -hits 100  # Note, this is different DL 2019 passage ranking!
     results:
       map:
-        - 0.3270
+        - 0.2620
+      NDCG@10:
+        - 0.5967
       R@100:
-        - 0.8608
-      R@1000:
-        - 0.9553
+        - 0.3992
+  - name: bm25-tuned+rm3
+    display: +RM3
+    params:
+      - -bm25
+      - -bm25.k1 4.68
+      - -bm25.b 0.87
+      - -rm3
+      - -hits 100  # Note, this is different DL 2019 passage ranking!
+    results:
+      map:
+        - 0.2812
+      NDCG@10:
+        - 0.6075
+      R@100:
+        - 0.4119
