--- a/src/main/resources/regression/dl19-doc-docTTTTTquery-per-passage.yaml
+++ b/src/main/resources/regression/dl19-doc-docTTTTTquery-per-passage.yaml
@@ -1,5 +1,5 @@
 ---
-name: msmarco-doc-docTTTTTquery-per-passage
+name: msmarco-doc-docTTTTTquery-per-passage # Note, this is the name of the collection; this way we can share index with the msmarco regressions
 index_command: target/appassembler/bin/IndexCollection
 index_utils_command: target/appassembler/bin/IndexReaderUtils
 search_command: target/appassembler/bin/SearchCollection
@@ -36,11 +36,11 @@ evals:
     can_combine: true
   - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
-      - -m recall.1000
+      - -m ndcg_cut.10
       - -c
     separator: "\t"
     parse_index: 2
-    metric: R@1000
+    metric: NDCG@10
     metric_precision: 4
     can_combine: true
 input_roots:
@@ -54,32 +54,60 @@ index_stats:
   documents (non-empty): 20544550
   total terms: 4203956960
 topics:
-  - name: "[MS MARCO Doc: Dev](https://github.com/microsoft/MSMARCO-Document-Ranking)"
-    path: topics.msmarco-doc.dev.txt
-    qrel: qrels.msmarco-doc.dev.txt
+  - name: "[DL19 (Doc)](https://trec.nist.gov/data/deep2019.html)"
+    path: topics.dl19-doc.txt
+    qrel: qrels.dl19-doc.txt
 models:
   - name: bm25-default
     display: BM25 (default)
     params:
-      - -bm25 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+      - -bm25 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
     results:
       map:
-        - 0.3182
+        - 0.2791
+      NDCG@10:
+        - 0.6099
       R@100:
-        - 0.8481
-      R@1000:
-        - 0.9490
+        - 0.4092
+  - name: bm25-default+rm3
+    display: +RM3
+    params:
+      - -bm25
+      - -rm3
+      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
+    results:
+      map:
+        - 0.3025
+      NDCG@10:
+        - 0.6318
+      R@100:
+        - 0.4394
   - name: bm25-tuned
     display: BM25 (tuned)
     params:
       - -bm25
       - -bm25.k1 2.56
       - -bm25.b 0.59
-      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
     results:
       map:
-        - 0.3211
+        - 0.2655
+      NDCG@10:
+        - 0.6271
       R@100:
-        - 0.8627
-      R@1000:
-        - 0.9530
+        - 0.4020
+  - name: bm25-tuned+rm3
+    display: +RM3
+    params:
+      - -bm25
+      - -bm25.k1 2.56
+      - -bm25.b 0.59
+      - -rm3
+      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
+    results:
+      map:
+        - 0.2895
+      NDCG@10:
+        - 0.6256
+      R@100:
+        - 0.4235
