--- a/src/main/resources/regression/dl20-doc-docTTTTTquery-per-doc.yaml
+++ b/src/main/resources/regression/dl20-doc-docTTTTTquery-per-doc.yaml
@@ -63,12 +63,12 @@ index_stats:
   documents (non-empty): 3213834
   total terms: 3748332076
 topics:
-  - name: "[MS MARCO Document Ranking: Dev Queries](https://github.com/microsoft/MSMARCO-Document-Ranking)"
+  - name: "[DL20 (Doc)](https://trec.nist.gov/data/deep2020.html)"
     path: topics.dl20.txt
     qrel: qrels.dl20-doc.txt
 models:
   - name: bm25-default
-    display: BM25 (Default)
+    display: BM25 (default)
     params:
       - -bm25
       - -hits 100  # Note, this is different DL 2020 passage ranking!
@@ -97,35 +97,35 @@ models:
       R@100:
         - 0.6555
   - name: bm25-tuned
-    display: BM25 (Tuned)
+    display: BM25 (tuned)
     params:
       - -bm25
-      - -bm25.k1 3.44
+      - -bm25.k1 4.68
       - -bm25.b 0.87
       - -hits 100  # Note, this is different DL 2020 passage ranking!
     results:
       map:
-        - 0.4150
+        - 0.4098
       NDCG@10:
-        - 0.5877
+        - 0.5852
       RR:
-        - 0.9328
+        - 0.9439
       R@100:
-        - 0.6231
+        - 0.6178
   - name: bm25-tuned+rm3
     display: +RM3
     params:
       - -bm25
-      - -bm25.k1 3.44
+      - -bm25.k1 4.68
       - -bm25.b 0.87
       - -rm3
       - -hits 100  # Note, this is different DL 2020 passage ranking!
     results:
       map:
-        - 0.4214
+        - 0.4104
       NDCG@10:
-        - 0.5705
+        - 0.5743
       RR:
-        - 0.8547
+        - 0.8701
       R@100:
-        - 0.6326
+        - 0.6127
