--- a/src/main/resources/regression/dl20-doc-per-passage.yaml
+++ b/src/main/resources/regression/dl20-doc-per-passage.yaml
@@ -1,5 +1,5 @@
 ---
-name: msmarco-passage # Note, this is the name of the collection; this way we can share index with the msmarco regressions
+name: msmarco-doc-per-passage
 index_command: target/appassembler/bin/IndexCollection
 index_utils_command: target/appassembler/bin/IndexReaderUtils
 search_command: target/appassembler/bin/SearchCollection
@@ -9,7 +9,7 @@ index_root:
 ranking_root:
 collection: JsonCollection
 generator: DefaultLuceneDocumentGenerator
-threads: 9
+threads: 1
 index_options:
   - -storePositions
   - -storeDocvectors
@@ -20,12 +20,11 @@ evals:
     params:
       - -m map
       - -c
-      - -l 2
     separator: "\t"
     parse_index: 2
     metric: map
     metric_precision: 4
-    can_combine: false
+    can_combine: true
   - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
       - -m ndcg_cut.10
@@ -34,83 +33,68 @@ evals:
     parse_index: 2
     metric: NDCG@10
     metric_precision: 4
-    can_combine: false
+    can_combine: true
   - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
       - -m recip_rank
       - -c
-      - -l 2
     separator: "\t"
     parse_index: 2
     metric: RR
     metric_precision: 4
-    can_combine: false
+    can_combine: true
   - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
       - -m recall.100
       - -c
-      - -l 2
     separator: "\t"
     parse_index: 2
     metric: R@100
     metric_precision: 4
-    can_combine: false
-  - command: tools/eval/trec_eval.9.0.4/trec_eval
-    params:
-      - -m recall.1000
-      - -c
-      - -l 2
-    separator: "\t"
-    parse_index: 2
-    metric: R@1000
-    metric_precision: 4
-    can_combine: false
+    can_combine: true
 input_roots:
   - /tuna1/      # on tuna
   - /store/      # on orca
   - /scratch2/   # on damiano
-input: collections/msmarco/passage/
-index_path: indexes/lucene-index.msmarco-passage.pos+docvectors+raw
+input: collections/msmarco/doc-per-passage/
+index_path: indexes/lucene-index.msmarco-doc-per-passage.pos+docvectors+raw
 index_stats:
-  documents: 8841823
-  documents (non-empty): 8841823
-  total terms: 352316036
+  documents: 20544550
+  documents (non-empty): 20544550
+  total terms: 3197886407
 topics:
-  - name: "[DL20 (Passage)](https://trec.nist.gov/data/deep2020.html)"
+  - name: "[DL20 (Doc)](https://trec.nist.gov/data/deep2020.html)"
     path: topics.dl20.txt
-    qrel: qrels.dl20-passage.txt
+    qrel: qrels.dl20-doc.txt
 models:
   - name: bm25-default
     display: BM25 (default)
     params:
-      - -bm25
+      - -bm25 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
     results:
       map:
-        - 0.2856
+        - 0.3584
       NDCG@10:
-        - 0.4796
+        - 0.5271
       RR:
-        - 0.6585
+        - 0.8479
       R@100:
-        - 0.5599
-      R@1000:
-        - 0.7863
+        - 0.5823
   - name: bm25-default+rm3
     display: +RM3
     params:
       - -bm25
       - -rm3
+      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
     results:
       map:
-        - 0.3019
+        - 0.3769
       NDCG@10:
-        - 0.4821
+        - 0.5159
       RR:
-        - 0.6360
+        - 0.8136
       R@100:
-        - 0.6046
-      R@1000:
-        - 0.8217
+        - 0.6224
   - name: bm25-default+ax
     display: +Ax
     params:
@@ -118,103 +102,97 @@ models:
       - -axiom
       - -axiom.deterministic
       - -rerankCutoff 20
+      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
     results:
       map:
-        - 0.3240
+        - 0.3854
       NDCG@10:
-        - 0.4834
+        - 0.5250
       RR:
-        - 0.6096
+        - 0.8123
       R@100:
-        - 0.6428
-      R@1000:
-        - 0.8483
+        - 0.6332
   - name: bm25-default+prf
     display: +PRF
     params:
       - -bm25
       - -bm25prf
+      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
     results:
       map:
-        - 0.3117
+        - 0.3672
       NDCG@10:
-        - 0.4721
+        - 0.5217
       RR:
-        - 0.6157
+        - 0.7911
       R@100:
-        - 0.5783
-      R@1000:
-        - 0.8074
+        - 0.5994
   - name: bm25-tuned
     display: BM25 (tuned)
     params:
       - -bm25
-      - -bm25.k1 0.82
-      - -bm25.b 0.68
+      - -bm25.k1 2.16
+      - -bm25.b 0.61
+      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
     results:
       map:
-        - 0.2876
+        - 0.3456
       NDCG@10:
-        - 0.4876
+        - 0.5213
       RR:
-        - 0.6594
+        - 0.8684
       R@100:
-        - 0.5669
-      R@1000:
-        - 0.8031
+        - 0.5715
   - name: bm25-tuned+rm3
     display: +RM3
     params:
       - -bm25
-      - -bm25.k1 0.82
-      - -bm25.b 0.68
+      - -bm25.k1 2.16
+      - -bm25.b 0.61
       - -rm3
+      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
     results:
       map:
-        - 0.3056
+        - 0.3471
       NDCG@10:
-        - 0.4808
+        - 0.4983
       RR:
-        - 0.6278
+        - 0.7807
       R@100:
-        - 0.6333
-      R@1000:
-        - 0.8286
+        - 0.6013
   - name: bm25-tuned+ax
     display: +Ax
     params:
       - -bm25
-      - -bm25.k1 0.82
-      - -bm25.b 0.68
+      - -bm25.k1 2.16
+      - -bm25.b 0.61
       - -axiom
       - -axiom.deterministic
       - -rerankCutoff 20
+      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
     results:
       map:
-        - 0.3322
+        - 0.3495
       NDCG@10:
-        - 0.5027
+        - 0.4942
       RR:
-        - 0.6328
+        - 0.8102
       R@100:
-        - 0.6468
-      R@1000:
-        - 0.8455
+        - 0.6086
   - name: bm25-tuned+prf
     display: +PRF
     params:
       - -bm25
-      - -bm25.k1 0.82
-      - -bm25.b 0.68
+      - -bm25.k1 2.16
+      - -bm25.b 0.61
       - -bm25prf
+      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
     results:
       map:
-        - 0.3136
+        - 0.3629
       NDCG@10:
-        - 0.4788
+        - 0.5260
       RR:
-        - 0.6252
+        - 0.8478
       R@100:
-        - 0.5782
-      R@1000:
-        - 0.8121
+        - 0.6064
