--- a/src/main/resources/regression/dl20-doc.yaml
+++ b/src/main/resources/regression/dl20-doc.yaml
@@ -68,7 +68,7 @@ topics:
     qrel: qrels.dl20-doc.txt
 models:
   - name: bm25-default
-    display: BM25 (Default)
+    display: BM25 (default)
     params:
       - -bm25
       - -hits 100  # Note, this is different DL 2020 passage ranking!
@@ -96,40 +96,8 @@ models:
         - 0.8541
       R@100:
         - 0.6392
-  - name: bm25-default+ax
-    display: +Ax
-    params:
-      - -bm25
-      - -axiom
-      - -axiom.deterministic
-      - -rerankCutoff 20
-      - -hits 100  # Note, this is different DL 2020 passage ranking!
-    results:
-      map:
-        - 0.3129
-      NDCG@10:
-        - 0.4266
-      RR:
-        - 0.7576
-      R@100:
-        - 0.5706
-  - name: bm25-default+prf
-    display: +PRF
-    params:
-      - -bm25
-      - -bm25prf
-      - -hits 100  # Note, this is different DL 2020 passage ranking!
-    results:
-      map:
-        - 0.3472
-      NDCG@10:
-        - 0.4670
-      RR:
-        - 0.7621
-      R@100:
-        - 0.6104
   - name: bm25-tuned
-    display: BM25 (Tuned)
+    display: BM25 (tuned)
     params:
       - -bm25
       - -bm25.k1 3.44
@@ -161,39 +129,36 @@ models:
         - 0.8188
       R@100:
         - 0.5983
-  - name: bm25-tuned+ax
-    display: +Ax
+  - name: bm25-tuned2
+    display: BM25 (tuned2)
     params:
       - -bm25
-      - -bm25.k1 3.44
-      - -bm25.b 0.87
-      - -axiom
-      - -axiom.deterministic
-      - -rerankCutoff 20
+      - -bm25.k1 4.46
+      - -bm25.b 0.82
       - -hits 100  # Note, this is different DL 2020 passage ranking!
     results:
       map:
-        - 0.3461
+        - 0.3583
       NDCG@10:
-        - 0.4934
+        - 0.5078
       RR:
-        - 0.8039
+        - 0.8541
       R@100:
-        - 0.6092
-  - name: bm25-tuned+prf
-    display: +PRF
+        - 0.5860
+  - name: bm25-tuned2+rm3
+    display: +RM3
     params:
       - -bm25
-      - -bm25.k1 3.44
-      - -bm25.b 0.87
-      - -bm25prf
+      - -bm25.k1 4.46
+      - -bm25.b 0.82
+      - -rm3
       - -hits 100  # Note, this is different DL 2020 passage ranking!
     results:
       map:
-        - 0.3559
+        - 0.3618
       NDCG@10:
-        - 0.4792
+        - 0.5202
       RR:
-        - 0.7758
+        - 0.8458
       R@100:
-        - 0.6175
+        - 0.5998
