--- a/src/main/resources/regression/msmarco-doc.yaml
+++ b/src/main/resources/regression/msmarco-doc.yaml
@@ -59,7 +59,7 @@ topics:
     qrel: qrels.msmarco-doc.dev.txt
 models:
   - name: bm25-default
-    display: BM25 (Default)
+    display: BM25 (default)
     params:
       - -bm25
     results:
@@ -81,34 +81,35 @@ models:
         - 0.6765
       R@1000:
         - 0.8785
-  - name: bm25-default+ax
-    display: +Ax
-    params:
-      - -bm25
-      - -axiom
-      - -axiom.deterministic
-      - -rerankCutoff 20
-    results:
-      map:
-        - 0.1147
-      R@100:
-        - 0.5750
-      R@1000:
-        - 0.8369
-  - name: bm25-default+prf
-    display: +PRF
-    params:
-      - -bm25
-      - -bm25prf
-    results:
-      map:
-        - 0.1357
-      R@100:
-        - 0.6362
-      R@1000:
-        - 0.8471
   - name: bm25-tuned
-    display: BM25 (Tuned)
+    display: BM25 (tuned)
+    params:
+      - -bm25
+      - -bm25.k1 3.44
+      - -bm25.b 0.87
+    results:
+      map:
+        - 0.2788
+      R@100:
+        - 0.8065
+      R@1000:
+        - 0.9326
+  - name: bm25-tuned+rm3
+    display: +RM3
+    params:
+      - -bm25
+      - -bm25.k1 3.44
+      - -bm25.b 0.87
+      - -rm3
+    results:
+      map:
+        - 0.2289
+      R@100:
+        - 0.7872
+      R@1000:
+        - 0.9320
+  - name: bm25-tuned2
+    display: BM25 (tuned2)
     params:
       - -bm25
       - -bm25.k1 4.46
@@ -120,7 +121,7 @@ models:
         - 0.8076
       R@1000:
         - 0.9357
-  - name: bm25-tuned+rm3
+  - name: bm25-tuned2+rm3
     display: +RM3
     params:
       - -bm25
@@ -134,33 +135,3 @@ models:
         - 0.7789
       R@1000:
         - 0.9307
-  - name: bm25-tuned+ax
-    display: +Ax
-    params:
-      - -bm25
-      - -bm25.k1 4.46
-      - -bm25.b 0.82
-      - -axiom
-      - -axiom.deterministic
-      - -rerankCutoff 20
-    results:
-      map:
-        - 0.1885
-      R@100:
-        - 0.7510
-      R@1000:
-        - 0.9249
-  - name: bm25-tuned+prf
-    display: +PRF
-    params:
-      - -bm25
-      - -bm25.k1 4.46
-      - -bm25.b 0.82
-      - -bm25prf
-    results:
-      map:
-        - 0.1531
-      R@100:
-        - 0.6819
-      R@1000:
-        - 0.8752
